# rust-notes-rest-axum-sqlx

./: .env.example  .gitignore  Cargo.toml  Makefile  api.http  docker-compose.yml  readme.md
migrations/: 20231222154709_create_notes_table.down.sql  20231222154709_create_notes_table.up.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
